<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false" tools:ignore="ResourceName">Football Blog</string>

    <!-- Provider -->
    <string name="auth_idp_name_google">Google</string>
    <string name="auth_idp_name_facebook">Facebook</string>
    <string name="auth_idp_name_twitter">Twitter</string>

    <string name="auth_btn_sign_in_with_email">Sign In with Email</string>
    <string name="auth_btn_sign_in_with_google">Sign In with Google</string>
    <string name="auth_btn_sign_in_with_facebook">Sign In with Facebook</string>
    <string name="auth_btn_create_a_new_account">Create A New Account</string>
    <string name="auth_btn_save">Save</string>
    <string name="auth_or">Or</string>

    <string name="auth_hint_email">Email</string>
    <string name="auth_hint_username">Username</string>
    <string name="auth_hint_display_name">Display Name</string>
    <string name="auth_hint_password">Password</string>

    <string name="auth_skip">Skip</string>
    <string name="auth_provider_name_email">Email</string>
    <string name="auth_progress_dialog_loading">Loading....</string>
    <string name="auth_invalid_email_address">That email address is not correct</string>
    <string name="auth_missing_email_address">Email field cannot be empty</string>
    <string name="auth_required_field">You can\'t leave this empty</string>
    <string name="auth_email_does_not_exist">This email address does not match existing account.</string>

    <string name="auth_button_next">Next</string>
    <string name="auth_hint_full_name">First &amp; Last Name</string>
    <string name="auth_hint_last_name">Last Name</string>
    <string name="auth_email_already_exists">We\'re Sorry but this Email is already taken</string>
    <string name="auth_username_missing">Username can\'t be empty</string>
    <string name="auth_username_exists">We\'re sorry but username is already taken.</string>
    <string name="auth_sign_up">Signing Up...</string>
    <string name="auth_button_login">Login</string>
    <string name="auth_sign_in">Signing In...</string>

    <plurals name="auth_error_weak_password" translation_description="Inline error for weak password">
        <item quantity="one" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d character and a mix of letters and numbers</item>
        <item quantity="other" translation_description="Inline error for weak password">Password not strong enough. Use at least %1$d characters and a mix of letters and numbers</item>
    </plurals>

    <string name="auth_welcome_back_password_prompt_body" translation_description="Message to users that need to signin using existing email accounts">
        You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>
        to sign in. Enter your password for that account.
    </string>

    <string name="auth_welcome_back_idp_prompt_body" translation_description="Message to users that need to signin using existing idp accounts">
       You\'ve already used <xliff:g example="jane.doe@example.com" id="email_addr" translation_description="">%1$s</xliff:g>. Click login button to continue.
    </string>

    <string name="auth_welcome_back_email_heading">Welcome Back!</string>
    <string name="auth_trouble_signing_in">Trouble signing in?</string>
    <string name="auth_welcome_back_idp_header">You already have an account</string>
    <string name="auth_button_send">Send</string>
    <string name="auth_general_error">An error has occurred.</string>
</resources>
